kubernetes/apps/qbittorrent/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-qbittorrent
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-qbittorrent: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: qbittorrent
            app.kubernetes.io/name: qbittorrent
            app.kubernetes.io/component: main
      toPorts:
        - ports:
            - port: "80"
            - port: "8080"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
      app.kubernetes.io/component: main
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-qbittorrent: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
  egress:
    - toCIDRSet:
        - cidr: 45.133.180.26/32
      toPorts:
        - ports:
            - port: "1443"
              protocol: UDP
